c4prj2_input/grade.txt
Grading at Tue Mar  9 08:40:28 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:20:7: error: invalid type argument of unary ‘*’ (have ‘deck_t {aka struct deck_tag}’)
       *fc->decks[fc->n_decks] = hand;
       ^
input.c:24:49: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
      add_future_card(fc,(fc->decks[fc->n_decks])->n_cards,unknown);
                                                 ^
input.c: In function ‘read_input’:
input.c:36:8: error: request for member ‘n_cards’ in something not a structure or union
   *read->n_cards = n_hands;
        ^
Compilation of input.c failed

Overall Grade: F
